# trellis

./: .gitignore  TRELLIS_Hybrid_Inference_Design.md  build_dino_embeddings_exact.py  run_trellis.py  safetensors_inventory.py  trellis_fetch_hf.py
csrc/: CMakeLists.txt  common.hpp
csrc/app/: main.cpp
csrc/capi/: trellis_c_api.cpp  trellis_c_api.hpp
csrc/kernels/: attn.cu  conv3d.cu  marching_cubes.cu  norm.cu  utils.cu
csrc/pipeline/: bindings.cpp  bindings.hpp  config.cpp  config.hpp  trellis_image_to_3d.cpp  trellis_image_to_3d.hpp
csrc/runtime/: allocator.cpp  allocator.hpp  cast.cu  cast.hpp  device.cpp  device.hpp  gemm.cu  gemm.hpp  graphs.cu  graphs.hpp  json.cpp  json.hpp  norm.cu  norm.hpp  npy_write.cpp  npy_write.hpp  npz.cpp  npz.hpp  ops.cu  ops.hpp  safetensors.cpp  safetensors.hpp  tensor.hpp  transpose.cu  transpose.hpp
csrc/samplers/: flow_euler.cpp  flow_euler.hpp
